--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -42,6 +42,7 @@
   }
 
   // Paragraph overrides.
+  // Paragraph - 1 column content.
   .product__content--top .paragraph.paragraph--type--1-column-content {
     margin-bottom: 15px;
 
@@ -97,6 +98,7 @@
     }
   }
 
+  // Paragraph - 2 column content.
   .paragraph.paragraph--type--2-column-image-content {
     background: url(../gfx/product/uh-axe/uh-stacked-firewood-bg.jpg) repeat;
 
@@ -136,6 +138,17 @@
       @media (max-width: $screen-xs-max) {
         opacity: .75;
       }
+    }
+  }
+
+  // Paragraph - Slick slider thumbs.
+  .paragraph.paragraph--type--uh-axe-slider .slick-slider__uh-axe-thumbs .slick-slide {
+    pointer-events: none;
+    opacity: 0.5;
+    transition: opacity .1s ease-in-out;
+
+    &.slick-current {
+      opacity: 1;
     }
   }
 
