--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -468,6 +468,7 @@
 
         input[type="radio"],
         input[type="checkbox"] {
+          position: absolute;
           opacity: 0;
           width: 0;
           height: 0;
