Update how default variation is set - Revert previous method to try new method. - Set default by changing url to include variation query.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_paragraphs.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_paragraphs.scss
@@ -365,6 +365,7 @@
         display: none;
         position: absolute;
         top: -54px;
+        left: 50%;
         width: 24px;
         height: 40px;
         background: url(../gfx/arrow-prev.svg) center center no-repeat;
