--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -15,7 +15,7 @@
   .site-content {
     padding: 0;
     margin-bottom: 0;
-    overflow-y: hidden;
+    overflow-x: hidden;
   }
 
   .product__content--top {
@@ -142,15 +142,13 @@
   }
 
   // Paragraph - Slick slider thumbs.
-  //.paragraph.paragraph--type--uh-axe-slider .slick-slider__uh-axe-thumbs .slick-slide {
-  //  pointer-events: none;
-  //  opacity: 0.5;
-  //  transition: opacity .1s ease-in-out;
-  //
-  //  &.slick-current {
-  //    opacity: 1;
-  //  }
-  //}
+  .paragraph.paragraph--type--uh-axe-slider .slick-slider__uh-axe-thumbs {
+    @media (min-width: $screen-md-min) {
+      .slick-track {
+        transform: translate3d(0, 0, 0) !important;
+      }
+    }
+  }
 
   // Override default image field styles.
   .field--name-field-image {
@@ -837,10 +835,7 @@
   }
 }
 
-// User selected default variation data attributes for jQuery.
-.default-variation-id,
-.default-variation-finish,
-.default-variation-length,
-.default-variation-weight {
+// User selected default variation for jQuery.
+.default-variation-id {
   display: none;
 }
