Adjust site library handling - Rename plus.js to uh-axe.js. - Add uh-axe library and imports it in uh-axe page template. - Moves YouTube video link handling into global scripts.js file.

--- a/web/themes/custom/commerce_2_demo/templates/pages/page--product--uh-axe.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page--product--uh-axe.html.twig
@@ -46,6 +46,10 @@
  */
 #}
 
+{# Include UX Axe library. #}
+{{ attach_library('commerce_2_demo/uh-axe') }}
+{# / Include UX Axe library. #}
+
 {# Site Header. #}
 {% include base_path ~ directory ~ '/templates/pages/includes/site_header.html.twig' %}
 {# / Site Header. #}
