--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_checkout.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_checkout.scss
@@ -201,15 +201,20 @@
             }
           }
 
-          &:after {
-            position: absolute;
-            top: calc(50% - 17px);
-            left: 16px;
-            font-size: 23px;
-            font-family: FontAwesome;
-            content: '\f014';
-            pointer-events: none;
-            transition: color .1s ease-in-out;
+          div {
+            position: relative;
+
+            &:after {
+              position: absolute;
+              top: 0;
+              left: 12px;
+              font-size: 23px;
+              line-height: 40px;
+              font-family: FontAwesome;
+              content: '\f014';
+              pointer-events: none;
+              transition: color .1s ease-in-out;
+            }
           }
         }
 
