Issue 37: Fix UH Axe handle finish not selectable in IE

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -466,10 +466,12 @@
 
         input[type="radio"],
         input[type="checkbox"] {
+          display: block;
           position: absolute;
+          z-index: 1;
           opacity: 0;
-          width: 0;
-          height: 0;
+          width: 100%;
+          cursor: pointer;
 
           &:checked ~ label {
             cursor: default;
