Correct spelling mistake

--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-order-item-add-to-cart-form--ux-axe.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-order-item-add-to-cart-form--ux-axe.html.twig
@@ -168,7 +168,7 @@
       </div>
       <div class="product__images__middle">
         <span class="heading">{{ 'UH Axe'|t }}</span>
-        {{ 'Built for'|t }}<br>{{ 'Urban Live'|t }}
+        {{ 'Built for'|t }}<br>{{ 'Urban Life'|t }}
       </div>
       <div class="product__images__bottom">
         <img src="{{ '/' ~ base_path ~ directory ~ '/gfx/product/uh-axe/uh-axe-feature-authentic.jpg' }}" alt="{{ 'Authentic Urban Hipster engraving'|t }}">
