Set pointer-events none for UH Axe sheath form options. It was blocking selection.

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -472,6 +472,7 @@
           opacity: 0;
           width: 100%;
           cursor: pointer;
+          pointer-events: none;
 
           &:checked ~ label {
             cursor: default;
