Add UH Recurring Digital theme files - Add page, commerce and add to cart templates. - Add scss and js files. - Add uh-recurring-digital library to libraries.yml. - Add .theme form alter.

--- a/web/themes/custom/commerce_2_demo/sass/custom/style.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/style.scss
@@ -20,6 +20,7 @@
 @import 'pages/blog';
 @import 'pages/product';
 @import 'pages/product_uh-axe';
+@import 'pages/product_uh-recurring-digital';
 @import 'pages/checkout';
 @import 'pages/user';
 
