--- a/web/themes/custom/commerce_2_demo/templates/pages/page--product--sir-mix-bittm.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page--product--sir-mix-bittm.html.twig
@@ -46,9 +46,9 @@
  */
 #}
 
-{# Include UH Axe library. #}
-{{ attach_library('commerce_2_demo/uh-axe') }}
-{# / Include UH Axe library. #}
+{# Include UH Recurring Digital library. #}
+{{ attach_library('commerce_2_demo/uh-recurring-digital') }}
+{# / Include UH Recurring Digital library. #}
 
 {# Site Header. #}
 {% include base_path ~ directory ~ '/templates/pages/includes/site_header.html.twig' %}
