--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-recurring-digital.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-recurring-digital.scss
@@ -44,58 +44,13 @@
   // Paragraph overrides.
   // Paragraph - 1 column content.
   .product__content--top .paragraph.paragraph--type--1-column-content {
-    margin-bottom: 15px;
 
-    h2.paragraph-title {
-      margin-top: 10px;
-      margin-bottom: 20px;
-      color: $gray-dark;
-      font-family: $f-tertiary;
-      font-size: 45px;
-      line-height: 1.2;
-      text-transform: none;
-
-      @media (max-width: $screen-sm-max) {
-        font-size: 36px;
-      }
-
-      @media (max-width: $screen-xs-max) {
-        font-size: 36px;
-      }
-    }
   }
 
   // Paragraph - 2 column content.
   .paragraph.paragraph--type--2-column-image-content {
-    background: url(../gfx/product/uh-axe/uh-stacked-firewood-bg.jpg) repeat;
-
-    // Button with video link class applied.
-    .paragraph--type--2-column-image-content__content {
-      .field--name-field-unlimited-cta-links {
-        a.video-link {
-          vertical-align: middle;
-          margin: 0 16px 0 0;
-          padding: 8px 0;
-          border: none;
-          background: transparent;
-          text-transform: none;
-          letter-spacing: normal;
-          color: #fff;
-
-          &:before {
-            display: inline-block;
-            position: relative;
-            top: 1px;
-            padding-right: 8px;
-            font-family: $f-fontawesome;
-            content: '\f144';
-          }
-
-          &:hover, &:focus {
-            text-decoration: underline;
-          }
-        }
-      }
+    &.wood-grain-bg {
+      background: url(../gfx/product/uh-recurring-digital/uh-woodgrain-bg.jpg) repeat;
     }
 
     .paragraph--type--2-column-image-content__content-left:after,
