Fix potential flexbox CSS scroll issue when side column active.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
@@ -23,6 +23,12 @@ body {
   display: flex;
 }
 
+.site-content .row-sidebar.row-eq-height {
+  @media (max-width: $screen-xs-max) {
+    display: block;
+  }
+}
+
 /**
  * Typography.
  */
