Remove guided tours button from maintenance page

--- a/web/themes/custom/commerce_2_demo/css/tours.css
+++ b/web/themes/custom/commerce_2_demo/css/tours.css
@@ -44,6 +44,10 @@
   }
 }
 
+.maintenance-page #siteTours-start.fixed-button {
+  display: none;
+}
+
 /* Tour selection modal - Modal content */
 
 #siteTours {
